# fits2db

./: .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  config.yml  index.html  mkdocs-requirements.txt  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  test-requirements.txt
.github/workflows/: build_docs.yml  python-publish.yml  unit_test.yml
contribution/code/: index.html
contribution/contribution/: index.html
contribution/docs/: index.html
contribution/setup/: index.html
contribution/tests/: index.html
docs/: index.md
docs/contribution/: code.md  contribution.md  docs.md  setup.md  tests.md
docs/installation-guide/: install-scratch.md  installation.md  overview.md
docs/reference/: adapters_base.md  adapters_meta.md  adapters_mysql.md  cli.md  config.md  core.md  database.md  fits.md  log.md  reference.md
docs/user-guide/: about-us.md  examples.md  how-to-guide-livestream.md  how-to-guide-set-focus.md  installation.md  overview.md  trouble.md  usage.md
fits2db/: __init__.py  log.py
fits2db/adapters/: __init__.py  base.py  meta.py  mysql.py
fits2db/cli/: cli.py  helper_func.py  utils.py
fits2db/config/: __init__.py  config.py  config_model.py
fits2db/config/templates/: config.yaml.j2
fits2db/core/: __init__.py  core.py
fits2db/fits/: __init__.py  fits.py
plots/: README.md  TSI_PLOT_LIB_JTSIM_pandas.py  anual_HKplot_DATA_JTSIM_DB.py  custom_HKplot_DATA_JTSIM_DB.py  dailyHKplot_DATA_JTSIM_DB.py  db_conf.yaml  hk1.yml  irradiancePlot_DATA_JTSIM_DB.py  lifetime_HKplot_DATA_JTSIM_DB.py  monthly_HKplot_DATA_JTSIM_DB.py  plot_data.py  requirements.txt  yearly_HKplot_DATA_JTSIM_DB.py
reference/adapters_base/: index.html
reference/adapters_meta/: index.html
reference/adapters_mysql/: index.html
reference/cli/: index.html
reference/config/: index.html
reference/core/: index.html
reference/database/: index.html
reference/fits/: index.html
reference/log/: index.html
reference/reference/: index.html
search/: search_index.json
sql/: column_to_lower.sql  make_datetime_v0.sql  rename_tables_to_lower.sql
tests/integration/mysql/: docker-compose.yml  test_mysql_db.py
tests/integration/mysql/base/: config.yml  config_update.yml  test_base.py
tests/unit/: conftest.py  docker-compose.yml  test_config.py  test_config_model.py  test_core.py  test_fits_class.py  test_fits_table.py  test_mysql_db.py
tests/unit/data/: 2021-07-07_L1a_corrupt.fits  config.yaml  invalid_config.yaml  invalid_config_yaml.yaml
user-guide/about-us/: index.html
user-guide/installation/: index.html
user-guide/overview/: index.html
user-guide/trouble/: index.html
user-guide/usage/: index.html
