[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fits2db"
version = "0.0.1b1"
authors = [
  { name="Cédric Renda", email="gosow9@hotmail.com" },
]
description = "A small cli tool to load fits files into a sql database"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
    "Typing :: Typed"
]
dependencies = [
"pandas >= 2.0",
"pydantic >= 2.8.0",
"Jinja2 >= 2.5.0",
"astropy >= 6.0.0",
"numpy >= 1.0.0, < 2.0",
"sqlalchemy >= 2.0.0"
]

[project.urls]
Homepage = "https://github.com/pmodwrc/fits2db"
Issues = "https://github.com/pmodwrc/fits2db/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
mypkg = ["*.txt", "*.j2"]




[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 80



